objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IOU</fullName>
                </value>
                <value>
                    <fullName>IPP</fullName>
                </value>
                <value>
                    <fullName>Municipal (MOU)</fullName>
                </value>
                <value>
                    <fullName>Coop</fullName>
                </value>
                <value>
                    <fullName>DistCoop</fullName>
                </value>
                <value>
                    <fullName>C&amp;I</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Trading Desk</fullName>
                </value>
                <value>
                    <fullName>REC Broker</fullName>
                </value>
                <value>
                    <fullName>Power Broker</fullName>
                </value>
                <value>
                    <fullName>Non-Muni Govt</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <inlineHelpText>Please indicate whether your Company is a C&amp;I or a Utility.</inlineHelpText>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial &amp; Industrial</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConvertedFromLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ConvertedFromLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Notes__c</fullName>
        <description>Vertiba 04/22/2014</description>
        <label>Lead Source Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PnL__c</fullName>
        <label>PnL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributed</fullName>
                </value>
                <value>
                    <fullName>RES Developed Project</fullName>
                </value>
                <value>
                    <fullName>3rd Party Construction</fullName>
                </value>
                <value>
                    <fullName>Transmission (S3)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_Status__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;Qualified&quot;),&quot;Qualified&quot;,&quot;Unqualified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RES_Declined_Reason_Detail__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Declined Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RES_Declined_Reason__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <inlineHelpText>Select the reason the lead has been declined.</inlineHelpText>
        <label>Declined Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contractual</fullName>
                </value>
                <value>
                    <fullName>Existing relationship with competitor</fullName>
                </value>
                <value>
                    <fullName>Geographical stretch</fullName>
                </value>
                <value>
                    <fullName>Internal resources (Manpower)</fullName>
                </value>
                <value>
                    <fullName>Issue with previous work</fullName>
                </value>
                <value>
                    <fullName>Missing Skills set</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Risk allocation</fullName>
                </value>
                <value>
                    <fullName>Scope</fullName>
                </value>
                <value>
                    <fullName>Specification</fullName>
                </value>
                <value>
                    <fullName>Timescale</fullName>
                </value>
                <value>
                    <fullName>Multiple reasons - see note</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Solution_of_Interest__c</fullName>
        <label>Technology/Solution of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wind</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Transmission</fullName>
                </value>
                <value>
                    <fullName>DSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unqualified_Date__c</fullName>
        <label>Unqualified Date</label>
        <type>Date</type>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>DeclineReasonRequired_LeadDeclined</fullName>
        <active>true</active>
        <description>Vertiba3/10/2014 - Phase1 - The &quot;declined reason&quot; is required when the lead has been declined</description>
        <errorConditionFormula>IF( 
AND( 
ISPICKVAL(Status,&quot;Declined&quot;), 
ISBLANK(TEXT(RES_Declined_Reason__c)) 
), 
true, 
false 
)</errorConditionFormula>
        <errorMessage>Please select the declined reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Distributed_Account_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Account_Type__c,&quot;&quot;),
$Profile.Id =&apos;00ei0000001lsec&apos; )</errorConditionFormula>
        <errorDisplayField>Account_Type__c</errorDisplayField>
        <errorMessage>Please enter Account Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Media_Required</fullName>
        <active>true</active>
        <description>Vertiba3/10/2014 - Phase1 - Created to make either email, phone, or mobile required</description>
        <errorConditionFormula>AND( 
ISBLANK(Phone), 
ISBLANK(Email), 
ISBLANK(MobilePhone),
$Profile.LastModifiedById  = &quot;00ei0000001BR5D&quot;,
IsConverted
)</errorConditionFormula>
        <errorMessage>Please enter either the Phone, Email or Mobile.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Opportunity_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISBLANK(ConvertedOpportunityId),
$Profile.Id =&apos;00ei0000001lsec&apos;,
IsConverted )</errorConditionFormula>
        <errorMessage>In Order to Convert this Lead you must create an Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Source_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(LeadSource,&quot;&quot;),
IsConverted )</errorConditionFormula>
        <errorMessage>In Order to Convert this Lead you must go back the Lead, and input a &apos;Lead Source&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OtherLeadSource</fullName>
        <active>true</active>
        <description>Vertiba 04/22/2014 Phase1- Created to track Other Lead Source if Lead Source=Other</description>
        <errorConditionFormula>AND(
ISPICKVAL(LeadSource,&quot;Other&quot;),
ISBLANK(Lead_Source_Notes__c),
IsConverted
)</errorConditionFormula>
        <errorMessage>Please populate the &quot;Other Lead Source&quot;</errorMessage>
    </validationRules>
</CustomObject>